# 2D_ShooterCpp

./: .gitignore  CMakeLists.txt  README.md
Game/: Game.sln
Game/Debug/: Game.ilk
Game/Game/: Game.vcxproj  Game.vcxproj.filters  Shooter.cpp
Game/Game/Debug/: vc141.idb
Game/Game/Debug/Game.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Game.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Game/Game/images/: about.psd
Game/Game/x64/Debug/: vc141.idb
Game/Game/x64/Debug/Game.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Game.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Game/x64/Debug/: Game.ilk
include/: AudioManager.h  Bullet.h  Enemy.h  Engine.h  Entity.h  HealBonus.h  Player.h  RecordManager.h  UIManager.h
src/: main.cpp
